tests/ast_interpreter/err_mutation_on_int.expected
<string>:3:5: error: only lists support indexing in assignments
    x[0] = 1;
    ^^^^
