tests/ast_interpreter/err_mutation_on_int.nx
fun main() {
    var x = 42;
    x[0] = 1;
}